added cell selector, allow to choose which cell to be read added current cell imageview, allow to see what image is sent to tesseract

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">SDK_tesseract</string>
+    <string name="read">Read</string>
+    <string name="up">up</string>
+    <string name="down">down</string>
+    <string name="left">left</string>
+    <string name="right">right</string>
 </resources>
